--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,14 +3,14 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [project]
-name = "mdfile"  # Replace with your package's name
-version = "0.1.0"   # Initial version
-author = "chuck"  # Replace with your name
+name = "mdfile"
+version = "0.2.0"
+author = "chuck"
 author-email = "chuck@acrocad.net"  # Replace with your email
-description = "A package to process and update Markdown files with embedded references." # Customize description
-readme = "README.md"  # Make sure to create this file for a detailed package description.
-license = "MIT"       # Replace with your license (e.g., "MIT", "Apache-2.0")
-requires-python = ">=3.8"  # Minimum Python version
+description = "Process and update Markdown files with embedded file/shell script output."
+readme = "README.md"
+license = "MIT"
+requires-python = ">=3.10"  # Minimum Python version
 keywords = ["markdown", "CLI", "markdown-processing"]
 classifiers = [
     "Development Status :: 4 - Beta", # Change based on the project state
@@ -49,7 +49,7 @@ authors = ["Chuck Bass <chuck@acrocad.net>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "~3.10 || ~3.11 || ~3.12 || ~3.13"
+python = "~3.10 || ~3.11 || ~3.12 || ~3.13 || ~3.14"
 
 
 [tool.poetry.group.dev.dependencies]
