--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "mdfile"
-version = "0.2.0"
+version = "0.3.0"
 author = "chuck"
 author-email = "chuck@acrocad.net"  # Replace with your email
 description = "Process and update Markdown files with embedded file/shell script output."
@@ -19,6 +19,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
+    "Programming Language :: Python :: 3.14",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Intended Audience :: Developers",
@@ -34,7 +35,7 @@ Homepage = "https://github.com/hucker/mdfile"  # URL for your project repo
 
 [project.scripts]
 # Define CLI entry points here
-mdfile = "mdfile.mdfile:app"
+mdfile = "mdfile:app"
 
 
 [tool.setuptools]
