--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,16 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "mdfile"
-version = "0.3.0"
+version = "0.4.0"
 author = "chuck"
-author-email = "chuck@acrocad.net"  # Replace with your email
+author-email = "chuck@acrocad.net"
 description = "Process and update Markdown files with embedded file/shell script output."
 readme = "README.md"
 license = "MIT"
-requires-python = ">=3.10"  # Minimum Python version
+requires-python = ">=3.10"
 keywords = ["markdown", "CLI", "markdown-processing"]
 classifiers = [
-    "Development Status :: 4 - Beta", # Change based on the project state
+    "Development Status :: 4 - Beta",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -27,31 +27,30 @@ classifiers = [
 ]
 
 dependencies = [
-    "typer",       # Required if your project uses Typer for CLI commands
+    "typer",
 ]
 
 [project.urls]
-Homepage = "https://github.com/hucker/mdfile"  # URL for your project repo
+Homepage = "https://github.com/hucker/mdfile"
 
 [project.scripts]
-# Define CLI entry points here
-mdfile = "mdfile:app"
-
+mdfile = "mdfile.mdfile:app"
 
 [tool.setuptools]
-packages = ["mdfile"]  # Replace with the main package(s) name
+package-dir = {"" = "src"}
 
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.poetry]
 name = "mdfile"
-version = "0.0.1"
+version = "0.4.0"
 description = "File Insertion for Markdown"
 authors = ["Chuck Bass <chuck@acrocad.net>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.10 || ~3.11 || ~3.12 || ~3.13 || ~3.14"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
@@ -65,4 +64,3 @@ ruff = "^0.9.7"
 uv = "^0.6.2"
 radon = "^6.0.0"
 pytest-xdist = "^3.6.1"
-
