--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ keywords = ["markdown", "CLI", "markdown-processing"]
 dependencies = [
     "typer",
     "rich",
+    "coverage==7.10.5",
+    "pytest==8.4.1",
 ]
 
 [project.urls]
